[project]
name = "seed-vault"
version = "0.1.2"
description = "Seismic FDSN data search, view and download tool."
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics"
]
readme = "README.md"
authors = [
           {name = "Ben Motevalli", email = "mot032@csiro.au"},
           {name = "Vincent Fazio", email = "vincent.fazio@csiro.au"}
]
keywords = ["seismic", "FDSN", "earthquakes", "miniseed"] 

[tool.poetry]
package-mode = true
packages = [{ include = "seed_vault" }]

[tool.poetry.scripts]
seed-vault = "seed_vault.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.39.0"
pandas = "^2.2.2"
folium = "^0.16.0"
requests = "^2.32.3"
streamlit-folium = "^0.23.0"
click = "^8.1.7"
tqdm = "^4.66.5"
obspy = "^1.4.1"
tabulate = "^0.9.0"
numpy = "^1.21"
matplotlib = "^3.8.5"
pydantic = "^2.9.1"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
plotly = "^5.24.1"
streamlit-extras = "^0.5.0"
streamlit-ace = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
pytest = "^8.3.4"

